--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
+/* General styles */
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Droid Serif', serif;
     display: flex;
+    background-color: #aca58f;
+    color: black;
 }
 
 .container {
@@ -12,19 +15,23 @@ body {
 
 .site-menu {
     width: 250px;
-    background: #333;
-    color: white;
+    background: #aca58f;
+    color: black;
     padding: 20px;
     box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .site-menu h1 {
     font-size: 24px;
-    margin-bottom: 20px;
+    margin: 0;
 }
 
 .site-menu a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -41,39 +48,36 @@ body {
     margin: 10px 0;
 }
 
-main {
-    flex-grow: 1;
-    overflow: auto;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 20px;
-}
-
-.gallery-item {
+.social-links {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ddd;
-    border: 1px solid #ccc;
-    height: 100px;
-    text-decoration: none;
-    font-size: 24px;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.social-links a {
+    font-size: 12px;
     color: black;
+    text-decoration: none;
 }
 
-.gallery-horizontal {
+.social-links a:hover {
+    text-decoration: underline;
+}
+
+/* Index-specific styles */
+.index-main {
     display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    text-align: center;
 }
 
-.gallery-horizontal img {
-    max-height: 100%;
-    max-width: auto;
-    margin-right: 20px;
+.index-main img {
+    width: 100%;
+    max-width: 800px;
+    aspect-ratio: 3 / 1;
+    object-fit: cover;
+    margin-bottom: 20px;
 }
