--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: 'Droid Serif', serif;
     display: flex;
-    background-color: #aca58f;
+    background-color: #dad1b6;
     color: black;
 }
 
@@ -15,7 +15,7 @@ body {
 
 .site-menu {
     width: 250px;
-    background: #aca58f;
+    background: #dad1b6;
     color: black;
     padding: 20px;
     box-sizing: border-box;
@@ -27,7 +27,7 @@ body {
 
 .site-menu h1 {
     font-size: 24px;
-    margin: 0;
+    margin-bottom: 20px;
 }
 
 .site-menu a {
@@ -64,7 +64,44 @@ body {
     text-decoration: underline;
 }
 
-/* Index-specific styles */
+
+main {
+    flex-grow: 1;
+    overflow: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 20px;
+}
+
+.gallery-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #dad1b6;
+    border: 1px solid #dad1b6;
+    height: 100px;
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+}
+
+.gallery-horizontal {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+.gallery-horizontal img {
+    max-height: 100%;
+    max-width: auto;
+    margin-right: 20px;
+}
+
 .index-main {
     display: flex;
     flex-direction: column;
@@ -72,12 +109,4 @@ body {
     align-items: center;
     flex-grow: 1;
     text-align: center;
-}
-
-.index-main img {
-    width: 100%;
-    max-width: 800px;
-    aspect-ratio: 3 / 1;
-    object-fit: cover;
-    margin-bottom: 20px;
 }
