--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,2 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE HTML>
+<html>
+<head>
+  
+</head>
+<body>
+
+    {{ content }}
+    
+
+</body>
+</html>
