--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: 'Droid Serif', serif;
     display: flex;
-    background-color: #e0dcd0;
+    background-color: #f0ece1;
     color: black;
 }
 
@@ -15,7 +15,7 @@ body {
 
 .site-menu {
     width: 250px;
-    background: #e0dcd0;
+    background: #f0ece1;
     color: black;
     padding: 20px;
     box-sizing: border-box;
@@ -26,7 +26,7 @@ body {
 }
 
 .site-menu h1 {
-    font-size: 24px;
+    
     margin-bottom: 20px;
     color: #101010;
     font-family: "Droid Serif", serif;
